# bda-svc-staff-architect-review

./: .dockerignore  .gitignore  AGENTS.md  BRANCH_STATE_MANIFEST.md  QUESTIONS_FOR_STAFF_ARCHITECT.md  README.md  REVIEW_INDEX.md  REVIEW_REFRESH_2026-05-06.md  SANITIZATION_MANIFEST.md  STAFF_ARCHITECT_BRIEF.md  Z_REFERENCE_DOCS_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
bda_eval/: README.md  bboxes.py  cli.py  config.py  discovery.py  eval.py  evaluation.ipynb  export.py  main.py  models.py  pyproject.toml
bda_eval/tests/: test_bboxes.py  test_models.py
bda_eval/utilities/: bboxes.py  tojson.py
docker/: Dockerfile
docker/docker_run_script/: run_bda.sh
docs/: 101-development.md  102-container.md
src/: AGENTS.md
src/bda_svc/: app.py  constants.py  export.py  inputs.py
tests/: test_model.py  test_utilities.py  test_yamls.py
tests/unit/: test_app.py  test_cli.py  test_export.py  test_inputs.py  test_interfaces.py  test_main.py  (+3 more)
z_reference_docs/: AGENTS.md  AGENTS_MD_GITHUB_BLOG_LESSONS.md  Best_MCP_Servers_for_the_bda-svc_Prompt_and_BBox_Workflow.md  CHATGPT_DEEP_RESEARCH_PROMPTS_MCP_AND_TOKENIZATION.md  CODEX_SUBAGENT_CATALOG_ANALYSIS.md  Capstone-Project.code-workspace  GIT_WORKTREE_UPDATE_CHECKLIST_GEMMA.md  GIT_WORKTREE_UPDATE_CHECKLIST_QWEN.md  GIT_WORKTREE_UPDATE_WORKFLOW.md  Notes.txt  PROJECT_BRAIN.md  PROMPT_CRAFTING_INSTRUCTIONAL_GUIDE.md  PROMPT_DEVELOPMENT_METHODOLOGY.md  Prompt_Wording_Tokenization_and_Bbox_Reliability_in_BDA_Prompting.md  Prompt_to_Start_up_agents_in_new_project.txt  REFERENCE_MASTER_INDEX.md  WORKING_CHANGELOG.md
(+890 files in other folders)
