[project]
name = "bda-svc"
version = "0.1.0"
description = "Automated Battle Damage Assessment system powered by machine learning."
readme = "README.md"
authors = [
    { name = "William Benitez", email = "wbenitez@andrew.cmu.edu" },
    { name = "Carlos Gil", email = "chgil@andrew.cmu.edu" },
    { name = "Nicholas Lind", email = "nlind@andrew.cmu.edu" },
    { name = "Iggy Siegel", email = "bsiegel2@andrew.cmu.edu" },
    { name = "Cory Wingate", email = "cwingate@andrew.cmu.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.0",
]

[project.scripts]
bda-svc = "bda_svc.app:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.uv.workspace]
members = [
    "bda_eval",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "D"]
ignore = ["S101", "D203", "D213", "D413", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
